반응형 스타일 추가

--- a/css/sample_company_01.css
+++ b/css/sample_company_01.css
@@ -1,6 +1,8 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@200;400;600&display=swap');
-
+html{
+    font-size: 16px;
+}
 *{
     margin: 0; padding: 0;
     
@@ -10,11 +12,17 @@
     font-family: 'Noto Sans KR', sans-serif;
 
 }
+.blind{
+    position: absolute;
+    left: -9999px;
+    overflow: hidden;    
+}
 ul{
     list-style: none;
 }
 a{
-    color: inherit; text-decoration: none;
+    color: inherit; 
+    text-decoration: none;
 }
 img{
     max-width:100%;
@@ -22,10 +30,14 @@ img{
     /**/
 }
 .cf::after{
-    content: ''; display: block; clear: both;
+    content: ''; 
+    display: block; 
+    clear: both;
 }
 .row{
-    max-width: 1289px; border: 0px solid white; margin: 0 auto;
+    max-width: 1289px; 
+    border: 0px solid white; 
+    margin: 0 auto;
 }
 body{
     font-family:  "noto sans korea", sans-serif;
@@ -40,6 +52,17 @@ body{
 #header h1{
     float: left;
     padding: 20px 0;
+}
+#header h1 a{
+    width:226px;
+    height: 39px;
+    display: block;
+    background: url(../img/워드프레스\ 기업홈페이지1\ 로고.png);
+    background-size: contain; /*사진이 잘리지 않게 하는 속성*/
+    background-repeat: no-repeat;
+}
+#header .menuopen{
+    display: none;
 }
 #header #nav{
     float: right;
@@ -122,7 +145,7 @@ body{
 }
 /*===================================animation 효과=======================================*/
 #section .slide .text h2{
-    font-size: 100px;
+    font-size: 5vw;
     opacity: 0;
     transform: translate3d(0, 100%, 0);
 }
@@ -135,6 +158,8 @@ body{
     margin: 30px 0 80px ;
     opacity: 0;
     transform: translate3d(0, 100%, 0);
+    /*글자 잘림 현상을 방지하는 코드*/
+    word-break: keep-all;
 }
 #section .slick-current.slick-active .slide .text p{
     animation: fadeInUp 1s 1  both 1.3s;
@@ -290,7 +315,8 @@ body{
     display: inline-block;
     border-radius: 5px;
 }
-#section .product .text .btn a:nth-child(1){ /*굳이 class를 나누지 않고 nth child로 나누면 됨*/
+#section .product .text .btn a:nth-child(1){ 
+    /*굳이 class를 나누지 않고 nth child로 나누면 됨*/
     background-color: #fff;
     color: #333;
     margin-right: 10px;
